@@ -1,3 +1,9 @@
+2006-01-06  Roland Dreier  <rdreier@cisco.com>
+
+	* examples/srq_pingpong.c (main): Fix SRQ example to avoid
+	problems with many QPs and events.  Based on a patch from Dotan
+	Barak (who also found the problem).
+
 2006-01-06  Ralph Campbell  <ralphc@pathscale.com>
 
 	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
